--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     ]
   },
   "peerDependencies": {
+    "ramda": "^0.27.1",
     "react": "~16.13.1",
     "react-native": "~0.63.4"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^8.0.0",
+    "@types/ramda": "^0.27.45",
     "@types/react": "~16.9.56",
     "@types/react-native": "~0.63.50",
     "react-native-builder-bob": "^0.18.2",
